--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
+    <%= stylesheet_link_tag 'blueprint/screen',:media=>'screen' %>
+    <%= stylesheet_link_tag 'blueprint/print',:media=>'print' %>
   </head>
   <body>
     <%= yield %>
